force-app/main/default/objects/CE_Hours__c/CE_Hours__c.object-meta.xml
<CustomObject>
    <label>CE Credit Hours</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>CE Credit Hours</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CE Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>