force-app/main/default/objects/CE_Hours__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CE Hours</fullName>
            </value>
            <value>
                <fullName>Academic Credits</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Publications</fullName>
            </value>
            <value>
                <fullName>Professional Service</fullName>
            </value>
            <value>
                <fullName>Item Writing</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>