force-app/main/default/objects/CE_Hours__c/fields/Education_Provider__c.field-meta.xml
<CustomField>
    <fullName>Education_Provider__c</fullName>
    <label>Education Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIMSS</fullName>
            </value>
            <value>
                <fullName>NON-HIMSS</fullName>
            </value>
            <value>
                <fullName>HIMSS Chapter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>