force-app/main/default/objects/CE_Hours__c/fields/Number_Of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Credits__c</fullName>
    <label>Number Of Credits</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>