force-app/main/default/objects/CE_Hours__c/fields/Program_Title__c.field-meta.xml
<CustomField>
    <fullName>Program_Title__c</fullName>
    <label>Program Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>