force-app/main/default/objects/CE_Hours__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipName>CE_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>