force-app/main/default/objects/CE_Hours__c/validationRules/Check_Subscription_is_Certificate_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Subscription_is_Certificate_type</fullName>
    <active>true</active>
    <errorConditionFormula>!Term__r.OrderApi__Subscription__r.Is_Certificate__c</errorConditionFormula>
    <errorMessage>You can&apos;t create new CE Credit Hours as the Subscription is not of Certification type.</errorMessage>
</ValidationRule>