force-app/main/default/objects/CE_Hours__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_Of_Credits__c</columns>
    <columns>Term__c</columns>
    <columns>Education_Provider__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>